--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -8,6 +8,13 @@
 {# Page settings and also body class #}
 {% set page = "" %}
 
+{# Breadcrumb #}
+{% set breadcrumb = [{
+    text:"よくある質問",
+    link:"#"
+  }] 
+%}
+
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
 
@@ -20,7 +27,7 @@
 <main class="faq-page">
   <section class="section-welcome">
     <h3 class="ttl-tertiary">中小企業・個人事業主のお客様向け</h3>
-    <h2 class="ttl-primary">よくある質問</h2>
+    <h1 class="ttl-primary">よくある質問</h1>
   </section>
   <section class="section-search">
     <div class="search">
