--- a/app/pages/news_category/index.njk
+++ b/app/pages/news_category/index.njk
@@ -27,8 +27,8 @@ link:"#"
 {% block content %}
 
 <main class="news_category-page">
-  <section class="section-new containers flex">
-    <div class="section-main">
+  <section class="section-new flex">
+    <div class="section-main containers">
       <div class="section-title">○○○○（カテゴリ名）に関するお知らせ</div>
 
       <div class="section-list">
@@ -97,7 +97,7 @@ link:"#"
         </div>
       </div>
     </div>
-    <div class="section-aside">
+    <div class="section-aside ">
       <div class="menu-title">カテゴリで探す</div>
       <div class="menu-item">
         <div class="item-icon"></div>
