--- a/app/pages/news_detail/index.njk
+++ b/app/pages/news_detail/index.njk
@@ -23,10 +23,10 @@ link:"/news_detail"
 {% block content %}
 
   <main class="news_detail-page">
-    <section class="">
-      <div class="containers flex">
+    <section class="section-new">
+      <div class="section-new__content flex">
         <!-- 投稿記事詳細メイン -->
-        <article class="main-conts single">
+        <article class="main-conts single containers">
           <div class="time_tag"><span class="time">2021.3.8</span><span class="tag">カテゴリ名</span></div>
           <h1 class="single__h1">ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。ニュースタイトルが入ります。</h1>
           <!-- SNSシェアボタン -->
