--- a/app/assets/scss/4-pages/_news_detail.scss
+++ b/app/assets/scss/4-pages/_news_detail.scss
@@ -1,71 +1,87 @@
 .news_detail-page {
-  .main-conts {
-    .time_tag {
-      .time {
-        font-size: 16px;
-        line-height: 24px;
+  .section-new {
+    .section-new__content {
+      @media #{$sp} {
+        display: flex;
+        flex-direction: column-reverse;
       }
-      .tag {
-        margin-left: 12px;
-        height: 26px;
-        padding: 3px 13px;
-        color: #fff;
-        font-weight: 500;
-        background: #000000;
-        border-radius: 23px;
-        font-size: 14px;
-        line-height: 20px;
-      }
-    }
-    .sns-share {
-      img {
-        height: 30px;
-        width: 30px;
-      }
-    }
-  }
 
-  .side-nav {
-    .catSearch {
-      min-width: 330px;
-      background: #f5f5f5 0% 0% no-repeat padding-box;
-      border-top: 4px solid #0497b5;
-      .ttl-tertiary {
-        text-align: center;
-        font-size: 20px;
-        line-height: 36px;
-        margin-bottom: 0;
-        padding: 17px 0 10px 0;
-      }
-      .catSearch__list {
-        li {
-          padding: 10px 20px;
-          border-bottom: 1px solid #ddd;
-          a {
+      .main-conts {
+        .time_tag {
+          .time {
             font-size: 16px;
-            line-height: 28px;
-            color: #111111;
-            padding-left: 40px;
-            border-bottom: none;
-            &:before {
-              left: 0px;
-              width: 6px;
-              height: 6px;
-              border-color: #0497b5 #0497b5 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
-              border-style: solid;
-              border-width: 2px;
+            line-height: 24px;
+          }
+          .tag {
+            margin-left: 12px;
+            height: 26px;
+            padding: 3px 13px;
+            color: #fff;
+            font-weight: 500;
+            background: #000000;
+            border-radius: 23px;
+            font-size: 14px;
+            line-height: 20px;
+          }
+        }
+        .sns-share {
+          img {
+            height: 30px;
+            width: 30px;
+          }
+        }
+      }
+
+      .side-nav {
+        .catSearch {
+          min-width: 330px;
+          background: #f5f5f5 0% 0% no-repeat padding-box;
+          border-top: 4px solid #0497b5;
+          .ttl-tertiary {
+            text-align: center;
+            font-size: 20px;
+            line-height: 36px;
+            margin-bottom: 0;
+            padding: 17px 0 10px 0;
+
+            @media #{$sp} {
+              font-size: 22px;
+              text-align: left;
+              margin-left: 20px;
             }
           }
-          &:last-child {
-            border-bottom: none;
-          }
-          &:hover {
-            background-color: $blue-color;
-            a {
-              color: $white-color;
-              background-color: transparent;
-              &::before {
-                border-color: #fff #fff rgba(0,0,0,0) rgba(0,0,0,0);
+          .catSearch__list {
+            li {
+              padding: 10px 20px;
+              border-bottom: 1px solid #ddd;
+              a {
+                font-size: 16px;
+                line-height: 28px;
+                color: #111111;
+                padding-left: 40px;
+                border-bottom: none;
+                &:before {
+                  left: 0px;
+                  width: 6px;
+                  height: 6px;
+                  border-color: #0497b5 #0497b5 rgba(0, 0, 0, 0)
+                    rgba(0, 0, 0, 0);
+                  border-style: solid;
+                  border-width: 2px;
+                }
+              }
+              &:last-child {
+                border-bottom: none;
+              }
+              &:hover {
+                background-color: $blue-color;
+                a {
+                  color: $white-color;
+                  background-color: transparent;
+                  &::before {
+                    border-color: #fff #fff rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+                  }
+                }
               }
             }
           }
