--- a/app/pages/news_list/index.njk
+++ b/app/pages/news_list/index.njk
@@ -23,8 +23,8 @@ link:"#"
 {% block content %}
 
 <main class="news_list-page">
-  <section class="section-new containers flex">
-    <div class="section-main">
+  <section class="section-new flex">
+    <div class="section-main containers">
       <div class="section-title">ニュース</div>
       <div class="section-subtitle">クレディセゾンのサービスに関するニュース・更新情報</div>
       <div class="section-list">
@@ -111,7 +111,7 @@ link:"#"
         </div>
       </div>
     </div>
-    <div class="section-aside">
+    <div class="section-aside ">
       <div class="menu-title">カテゴリで探す</div>
       <div class="menu-item">
         <div class="item-icon"></div>
