--- a/app/assets/scss/4-pages/_news_list.scss
+++ b/app/assets/scss/4-pages/_news_list.scss
@@ -138,6 +138,9 @@
         width: 100%;
       }
     }
+    @media #{$sp} {
+      padding-top: 35px;
+    }
   }
   .section-pagination {
     display: flex;
