--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -109,6 +109,7 @@
 
             a {
               display: flex;
+              justify-content: space-between;
               align-items: center;
               border: none;
               padding: 0;
@@ -131,6 +132,9 @@
                     font-size: 12px;
                   }
                 }
+                @media #{$sp} {
+                  min-width: auto;
+                }
               }
               &:hover {
                 background-color: $black-color;
@@ -147,6 +151,10 @@
 
             a:before {
               display: none;
+            }
+
+            @media #{$sp} {
+              width: 90%;
             }
           }
           &__img {
