--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -751,6 +751,7 @@
   background-color: transparent;
   padding: 18px 0;
   font-size: 16px;
+  font-weight: bold;
   text-align: center;
 
   border: 2px solid $blue-color;
@@ -785,6 +786,8 @@
   }
   &:hover {
     background-color: $blue-color;
+    color: #ffffff;
+    opacity: 1;
     &::before {
       border-top: 3px solid $white-color;
       border-right: 3px solid $white-color;
