--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -8,6 +8,12 @@
 {# Page settings and also body class #}
 {% set page = "" %}
 
+{# Breadcrumb #}
+{% set breadcrumb = [{
+  text:"中小企業様向けサービス",
+  link:"#"
+  }] %}
+
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
 
