--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -8,6 +8,14 @@
 {# Page settings and also body class #}
 {% set page = "" %}
 
+{# Breadcrumb #}
+{% set breadcrumb = [
+  {
+    text: "個人事業主様向けサービス",
+    link: "#"
+  }
+] %}
+
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
 
