--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -4,7 +4,7 @@
       <section class="breadcrumb">
         <ul class="flex">
           <li>
-            <a href="#">TOP</a>
+            <a href="/">TOP</a>
           </li>
 
           {% for crumb in breadcrumb %}
