--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -29,11 +29,11 @@
       </div>
       <div class="section-welcome__inner">
         <h3 class="ttl-tertiary">
-          {{ smaller_companies.welcome.inner }}
+          {{ smaller_companies.welcome.inner | safe }}
         </h3>
       </div>
       <div class="section-welcome__title">
-        <h2 class="ttl-primary">{{ smaller_companies.welcome.title }}</h2>
+        <h1 class="ttl-primary">{{ smaller_companies.welcome.title }}</h1>
       </div>
       <div>
         <a href="#" class="blue_gradient_btn">{{ common.button.download }}</a>
@@ -186,7 +186,7 @@
                 <dd>{{ solution.description | safe }}</dd>
 
                 <div class="flex gap30 aic sp-reverse">
-                  <div class="sec-left-wrapper {{ !solution.detail ? 'w-100' : '' }}">
+                  <div class="sec-left-wrapper">
                     <figure class="sec__img"><img src={{ solution.image }}></figure>
                   </div>
                   {% if solution.detail %}
