--- a/app/pages/whitepaper/index.njk
+++ b/app/pages/whitepaper/index.njk
@@ -246,7 +246,10 @@
         </div>
 
         <div class="quinary-btn">
-          <a href="#" class="blue_gradient_btn btn-more">チェックした資料をダウンロードする</a>
+          <a href="#" class="blue_gradient_btn btn-more">
+            <span class="sp-only">チェックした資料を<br/>ダウンロードする</span>
+            <span class="pc-only">チェックした資料をダウンロードする</span>
+          </a>
         </div>
       </div>
     </section>
