--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -18,7 +18,7 @@
     .ttl-primary {
       font-size: 42px;
       margin-bottom: 31px;
-      line-height: 1;
+      line-height: 50px;
 
       @media #{$sp} {
         font-size: 32px;
