--- a/app/assets/scss/4-pages/_catalog_list.scss
+++ b/app/assets/scss/4-pages/_catalog_list.scss
@@ -63,6 +63,7 @@
           height: 438px;
           background: #f5f5f5 0% 0% no-repeat padding-box;
           box-shadow: 0px 3px 20px #00000029;
+          transition: all .3s;
           .item-thumbnail {
             position: relative;
             .thumbnail--up {
@@ -94,6 +95,9 @@
               box-shadow: 3px 3px 2px #00000029;
               border: 1px solid #707070;
               position: absolute;
+            }
+            &:hover {
+              transform: scale(1.03);
             }
           }
           .item-checkbox {
@@ -158,6 +162,17 @@
               border-right: 2px solid #ffffff;
               border-bottom: 2px solid #ffffff;
             }
+            &:hover {
+              background-color: transparent;
+              border: 2px solid $blue-color;
+              .button-name {
+                color: $blue-color;
+              }
+              .button-icon {
+                border-right: 2px solid $blue-color;
+                border-bottom: 2px solid $blue-color;
+              }
+            }
           }
         }
       }
@@ -195,6 +210,17 @@
         transform: matrix(0.71, -0.71, 0.71, 0.71, 0, 0);
         border-right: 2px solid #ffffff;
         border-bottom: 2px solid #ffffff;
+      }
+      &:hover {
+        background-color: transparent;
+        border: 2px solid $blue-color;
+        .button-name {
+          color: $blue-color;
+        }
+        .button-icon {
+          border-right: 2px solid $blue-color;
+          border-bottom: 2px solid $blue-color;
+        }
       }
     }
   }
