--- a/app/assets/scss/4-pages/_detail.scss
+++ b/app/assets/scss/4-pages/_detail.scss
@@ -47,8 +47,9 @@
         display: inline;
 
         @media #{$sp} {
-          padding-left: 0;
-          padding-right: 0;
+          font-size: 14px;
+          padding-left: 15px;
+          padding-right: 15px;
         }
 
         &::after {
