--- a/app/assets/scss/3-modules/_footer.scss
+++ b/app/assets/scss/3-modules/_footer.scss
@@ -128,6 +128,29 @@ footer {
           padding: 0 50px;
         }
 
+        .light_btn {
+          a {
+            border: 2px solid $white-color;
+          }
+          &:hover {
+            a {
+              border: 2px solid $blue-color;
+              background-color: black;
+              color: $white-color;
+            }
+
+            svg {
+              circle {
+                fill: #ffffff;
+              }
+
+              path {
+                stroke: #0497b5;
+              }
+            }
+          }
+        }
+
         li {
           text-align: center;
           color: #fff;
