--- a/app/assets/scss/4-pages/_catalog_thanks.scss
+++ b/app/assets/scss/4-pages/_catalog_thanks.scss
@@ -7,19 +7,27 @@
   }
 
   .section-welcome {
+    position: relative;
+    min-height: 574px;
     text-align: center;
     padding: 70px 0;
     background-image: url("/assets/img/common/lower_visual.png");
     background-size: cover;
     background-repeat: no-repeat;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 672px);
-
     @media #{$sp} {
       height: auto;
+    }
+
+    .container-1200 {
+      width: 100%;
+      max-width: 1200px;
+      margin: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 0 15px;
     }
 
     .ttl-primary {
@@ -36,7 +44,7 @@
       font-weight: 400;
 
       @media #{$sp} {
-        font-size: 12px;
+        font-size: 11px;
       }
     }
 
