create saison_invoice sidebar

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -41,6 +41,7 @@
 @import '3-modules/company';
 @import '3-modules/thanks';
 @import '3-modules/home';
+@import '3-modules/sidebar';
 
 
 // 4 - pages
