--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="nav__list__button pc-only">
-      <a href="#">ご相談・お問合せ</a>
+      <a href="#">ご相談・お問い合わせ</a>
     </div>
   </div>
 
