--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -42,6 +42,7 @@ $gray-color-4: #0000001C;
 $gray-color-5: #666666;
 $gray-color-6: #00000029;
 $gray-color-7: #EEEEEE;
+$gray-color-8: #797979;
 
 $yellow-color: #FFFF01;
 
