--- a/app/assets/scss/4-pages/_personal.scss
+++ b/app/assets/scss/4-pages/_personal.scss
@@ -331,6 +331,13 @@
     }
   }
 
+  .section-license {
+    font-size: 13px;
+    color: $white-color;
+    background-color: $gray-color-8;
+    padding: 20px 0;
+  }
+
   // ===========END SECTIONS==========
 
   .section-primary-wrapper {
