--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -89,33 +89,19 @@
     <div class="anc">
       <div class="containers">
         <ul class="flex jcC gap30 inherit anc__box">
-          <li>
-            <a href="#">
-              <div class="anc__box__img smes"></div>
+          <li class="anc__box__smes">
+            <a href="#" class="anc__box__container">
               <div class="anc__box__content">
-                <span class="anc__box__content--title">中小企業様向け</span>
-                <span class="anc__box__content--description">サービスはこちら</span>
-              </div>
-              <div class="anc__box__svg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-                  <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-                    transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
-                </svg>
+                <span>中小企業様向け</span>
+                <span>サービスはこちら</span>
               </div>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <div class="anc__box__img sole"></div>
+          <li class="anc__box__sole">
+            <a href="#" class="anc__box__container">
               <div class="anc__box__content">
-                <span class="anc__box__content--title">個人事業主様向け</span>
-                <span class="anc__box__content--description">サービスはこちら</span>
-              </div>
-              <div class="anc__box__svg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-                  <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
-                    transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
-                </svg>
+                <span>個人事業主様向け</span>
+                <span>サービスはこちら</span>
               </div>
             </a>
           </li>
@@ -519,46 +505,46 @@
         </div>
         <div class="sec-news__box">
           <a href="#" class="sec-news__box__container"></a>
-            <dl class="flex aiC sec-news__box--item">
-              <dt class="flex aiC sp-fS">
-                <time class="time">2022.9.20</time>
-                <span class="black_pill_btn small">セミナー</span>
-              </dt>
-              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタイトルが入ります</dd>
-            </dl>
+          <dl class="flex aiC sec-news__box--item">
+            <dt class="flex aiC sp-fS">
+              <time class="time">2022.9.20</time>
+              <span class="black_pill_btn small">セミナー</span>
+            </dt>
+            <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタイトルが入ります</dd>
+          </dl>
           </a>
         </div>
         <div class="sec-news__box">
           <a href="#" class="sec-news__box__container"></a>
-            <dl class="flex aiC sec-news__box--item">
-              <dt class="flex aiC sp-fS">
-                <time class="time">2022.9.20</time>
-                <span class="black_pill_btn small">お知らせ</span>
-              </dt>
-              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
-            </dl>
+          <dl class="flex aiC sec-news__box--item">
+            <dt class="flex aiC sp-fS">
+              <time class="time">2022.9.20</time>
+              <span class="black_pill_btn small">お知らせ</span>
+            </dt>
+            <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
+          </dl>
           </a>
         </div>
         <div class="sec-news__box">
           <a href="#" class="sec-news__box__container"></a>
-            <dl class="flex aiC sec-news__box--item">
-              <dt class="flex aiC sp-fS">
-                <time class="time">2022.9.20</time>
-                <span class="black_pill_btn small">セミナー</span>
-              </dt>
-              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタ</dd>
-            </dl>
+          <dl class="flex aiC sec-news__box--item">
+            <dt class="flex aiC sp-fS">
+              <time class="time">2022.9.20</time>
+              <span class="black_pill_btn small">セミナー</span>
+            </dt>
+            <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタ</dd>
+          </dl>
           </a>
         </div>
         <div class="sec-news__box">
           <a href="#" class="sec-news__box__container"></a>
-            <dl class="flex aiC sec-news__box--item">
-              <dt class="flex aiC sp-fS">
-                <time class="time">2022.9.20</time>
-                <span class="black_pill_btn small">お知らせ</span>
-              </dt>
-              <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
-            </dl>
+          <dl class="flex aiC sec-news__box--item">
+            <dt class="flex aiC sp-fS">
+              <time class="time">2022.9.20</time>
+              <span class="black_pill_btn small">お知らせ</span>
+            </dt>
+            <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
+          </dl>
           </a>
         </div>
       </div>
@@ -573,7 +559,7 @@
   <section class="octonary-section">
     <div>
       <div class="ttl-notice">CONTACT</div>
-      <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
+      <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問い合わせ</h3>
       <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
@@ -589,7 +575,7 @@
             </div>
             <div href="#" class="card">
               <summary class="card__box">
-                <div class="card__box--ttl">ご相談・お問合せはこちら</div>
+                <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
                 <div class="card__box--txt">各種ソリューションに関するお問合せは
                   <br>
                   サービス資料をダウンロードいただけます。
