--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -255,5 +255,11 @@
         </div>
       </div>
     </section>
+
+    <section class="section-license">
+      <div class="container">
+        {{ smaller_companies.license.title }}
+      </div>
+    </section>
   </main>
 {% endblock %}
