--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -1,7 +1,7 @@
 <header>
   <div class="top__header flex">
     <div class="header__logo">
-      <a href="#"><img src="/assets/img/logo/header-nav-list-logo.png" /></a>
+      <a href="/"><img src="/assets/img/logo/header-nav-list-logo.png" /></a>
     </div>
     <div class="nav__list__container flex gap16">
       <div class="nav__list__bar">
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="nav__list__button pc-only">
-        <a href="#">ご相談・お問合せ</a>
+        <a href="#">ご相談・お問い合わせ</a>
       </div>
     </div>
   </div>
