--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -98,6 +98,7 @@
           }
 
           .ttl-quaternary {
+            font-size: 20px;
             background-color: transparent;
             color: #000;
             text-align: left;
