--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -401,5 +401,10 @@
         </div>
       {% endfor %}
     </section>
+    <section class="section-license">
+      <div class="container">
+        ※「アメリカン・エキスプレス」は、アメリカン・エキスプレスの登録商標です。(株)クレディセゾンは、アメリカン・エキスプレスのライセンスに基づき使用しています。
+      </div>
+    </section>
   </main>
 {% endblock %}
