--- a/app/assets/scss/2-basics/_base.scss
+++ b/app/assets/scss/2-basics/_base.scss
@@ -345,6 +345,12 @@ main {
   max-width: 1200px;
   margin: auto;
  }
+
+ .container-800 {
+  max-width: 800px;
+  margin: auto;
+ }
+
 /*** Font size ***/
 @each $value in $font-sizes {
   .font-#{$value} {
