--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -86,7 +86,7 @@
     <div class="banner__title">
       <h3 class="ttl-tertiary">導入前のご質問・ご相談を受け付けています。<br>お気軽にお問い合わせください</h3>
       <div class="quinary-btn">
-        <a href="#" class="blue_gradient_btn">導入のご相談・お問い合わせ（無料）</a>
+        <a href="/contact" class="blue_gradient_btn">導入のご相談・お問い合わせ（無料）</a>
       </div>
       <div class="ttl-quaternary">2営業日以内に回答いたします。</div>
     </div>
@@ -105,7 +105,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+                <div><a class="blue_gradient_btn" href="/catalog_list">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="#" class="card">
@@ -115,7 +115,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="blue_gradient_btn" href="#">お気軽にお問い合わせください。</a></div>
+                <div><a class="blue_gradient_btn" href="/contact">お気軽にお問い合わせください。</a></div>
               </summary>
             </div>
           </div>
