--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -92,7 +92,7 @@
               </a>
             </li>
             <li class="card-type6">
-              <a href="#" class="card">
+              <a href="#challenge-raise-funds" class="card">
                 <div class="ttl-quaternary-container">
                   <h4 class="ttl-quaternary">資金調達をしたい</h4>
                 </div>
