--- a/app/assets/scss/4-pages/_contact.scss
+++ b/app/assets/scss/4-pages/_contact.scss
@@ -18,6 +18,7 @@
     .ttl-primary {
       font-size: 42px;
       text-align: center;
+      margin-bottom: 0;
 
       @media #{$sp} {
         font-size: 32px;
