--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -87,17 +87,12 @@
 
             <label class="custom-checkbox flex fS aiC">
               <input type="checkbox">
-              <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスファンディング</span>
-            </label>
-
-            <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">セゾンフクリコ</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
               <input type="checkbox">
-              <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスサポートローング</span>
+              <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスサポートローン</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
@@ -133,7 +128,17 @@
               <ul class="select_ul">
                 <li>
                   <div class="option">
-                    <p>商品の機能について</p>
+                    <p>東京府</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="option">
+                    <p>置賜県</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="option">
+                    <p>堺県</p>
                   </div>
                 </li>
               </ul>
@@ -170,7 +175,7 @@
 
         <div class="form-section tel-field">
           <div class="form-ttl">
-            <span class="item h1">電話番号</span> <span class="required"></span>
+            <span class="item h1">お問い合わせ内容詳細</span> <span class="required"></span>
           </div>
 
           <input type="tel" placeholder="03-1234-5678">
@@ -248,7 +253,7 @@
           </label>
         </div>
 
-        <a href="#">
+        <a href="/info/legal">
           <p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
         </a>
 
