--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -39,13 +39,12 @@
 
     <section class="section-primary section">
       <div class="anc01">
-        <div class="containers">
+        <div class="container-800">
           <div class="anc01__content">
             <h1 class="anc01__content-head">よくあるご質問</h1>
             <p class="anc01__content-detail">
-              お客様からよくいただくご質問にお答えします。この他にご質問がある方は、
+              お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせ</a>より、お気軽に連絡ください。
               <br>
-              <a>お問い合わせ</a>より、お気軽に連絡ください。<br>
               2営業日以内に担当者からご連絡させて頂きます。
             </p>
           </div>
@@ -54,7 +53,7 @@
     </section>
 
     <section class="section-secondary section">
-      <div class="containers">
+      <div class="container-800">
 
         {% for i in range(1, 5) %}
           <div class="QA__content">
@@ -85,7 +84,7 @@
                 <summary class="card__box">
                   <div class="card__info">
                     <div class="card__info-image">
-                      <img src="/assets/img/common/book.png" alt="Your Image">
+                      {% include 'component/icons/book.njk' %}
                     </div>
                     <div class="card__info-content">
                       <h2>サービス内容について <br> 詳しく知りたい方はこちら</h2>
@@ -102,7 +101,7 @@
                 <summary class="card__box">
                   <div class="card__info col-right">
                     <div class="card__info-image">
-                      <img src="/assets/img/common/laptop.png" alt="Your Image">
+                      {% include 'component/icons/laptop.njk' %}
                     </div>
                     <div class="card__info-content">
                       <h2>利用イメージを <br> 知りたい方はこちら</h2>
