remove redirect link

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -56,7 +56,7 @@
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
-          <a href="/business_card_creation">
+          <a href="#">
             <span>ビジネスカードを作りたい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -68,7 +68,7 @@
           </a>
         </li>
         <li>
-          <a href="/business_efficency">
+          <a href="#">
             <span>業務を効率化したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -80,7 +80,7 @@
           </a>
         </li>
         <li>
-          <a href="/welfare">
+          <a href="#">
             <span>福利厚生を充実させたい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -94,7 +94,7 @@
       </ul>
       <ul class="nav__dropdown__list__secondary">
         <li>
-          <a href="/reduction_expenses">
+          <a href="#">
             <span>経費を削減したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -213,7 +213,7 @@
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
-          <a href="/business_card_creation">
+          <a href="#">
             <span>ビジネスカードを作りたい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -225,7 +225,7 @@
           </a>
         </li>
         <li>
-          <a href="/business_efficency">
+          <a href="#">
             <span>業務を効率化したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -237,7 +237,7 @@
           </a>
         </li>
         <li>
-          <a href="/welfare">
+          <a href="#">
             <span>福利厚生を充実させたい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
@@ -250,7 +250,7 @@
         </li>
 
         <li>
-          <a href="/reduction_expenses">
+          <a href="#">
             <span>経費を削減したい</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
               <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
