--- a/app/pages/catalog_detail/index.njk
+++ b/app/pages/catalog_detail/index.njk
@@ -184,7 +184,7 @@
             </label>
           </div>
 
-          <a href="/info/legal" class="term-agreement">
+          <a href="#" class="term-agreement">
             <p>「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
           </a>
 
