--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -253,7 +253,7 @@
           </label>
         </div>
 
-        <a href="/info/legal">
+        <a href="#">
           <p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
         </a>
 
