--- a/app/pages/section/index.njk
+++ b/app/pages/section/index.njk
@@ -591,7 +591,7 @@
           <div class="item__box--txt"><span>5</span>　媒体</div>
         </li>
       </ul>
-      <a href="/case/" class="more">実績・事例を見る</a>
+      <a href="#" class="more">実績・事例を見る</a>
     </div>
   </section>
 
@@ -993,7 +993,7 @@
 
         <a href="/contact/" class="bnr-contact"><img src="/assets/img/common/bnr-contact.png" alt=""></a>
 
-        <a href="/catalog/" class="bnr-catalog"><img src="/assets/img/common/bnr-catalog.png" alt=""></a>
+        <a href="#" class="bnr-catalog"><img src="/assets/img/common/bnr-catalog.png" alt=""></a>
 
         <div class="search">
           <form action="" class="search__form">
@@ -1157,7 +1157,7 @@
 
         <a href="/contact/" class="bnr-contact"><img src="/assets/img/common/bnr-contact.png" alt=""></a>
 
-        <a href="/catalog/" class="bnr-catalog"><img src="/assets/img/common/bnr-catalog.png" alt=""></a>
+        <a href="#" class="bnr-catalog"><img src="/assets/img/common/bnr-catalog.png" alt=""></a>
 
         <div class="search">
           <form action="" class="search__form">
@@ -1329,7 +1329,7 @@
                   <span class="item">個人情報の取扱いについて</span>
                   <span class="required"></span>
                 </th>
-                <td><div class="flex fS aiC"><input type="checkbox">同意する</div><p>弊社Webサイトの<a href="/privacy/">プライバシーポリシー</a>をご確認の上、ご同意いただき送信をお願いいたします。</p></td>
+                <td><div class="flex fS aiC"><input type="checkbox">同意する</div><p>弊社Webサイトの<a href="#">プライバシーポリシー</a>をご確認の上、ご同意いただき送信をお願いいたします。</p></td>
               </tr>
             </table>
             <button type="submit" class="blue_more small">確認画面へ進む</button>
@@ -1353,24 +1353,24 @@
       <div class="group">
         <div class="group__ttl">原料供給</div>
         <ul class="group__list">
-          <li><a href="/rosehip_polyphenol/">ローズヒップポリフェノールMJ</a></li>
-          <li><a href="/cassis/">カシスエキスMJ</a></li>
-          <li><a href="/salacia/">サラシアエキスMJ</a></li>
+          <li><a href="#">ローズヒップポリフェノールMJ</a></li>
+          <li><a href="#">カシスエキスMJ</a></li>
+          <li><a href="#">サラシアエキスMJ</a></li>
         </ul>
       </div>
 
       <div class="group">
         <div class="group__ttl">シームレスカプセル・OEM受託</div>
         <ul class="group__list">
-          <li><a href="/seamless_capsule/">シームレスカプセル受託</a></li>
-          <li><a href="/supplement_oem/">サプリメントOEM受託</a></li>
+          <li><a href="#">シームレスカプセル受託</a></li>
+          <li><a href="#">サプリメントOEM受託</a></li>
         </ul>
       </div>
 
       <div class="group">
         <div class="group__ttl">ニーズ・課題から探す</div>
         <ul class="group__list">
-          <li><a href="/differentiation/">商品の差別化にお困りの企業様へ</a></li>
+          <li><a href="#">商品の差別化にお困りの企業様へ</a></li>
         </ul>
       </div>
 
@@ -1379,15 +1379,15 @@
         <ul class="group__list">
           <!-- <li><a href="/case/">実績・事例</a></li> -->
           <li><a href="/whitepaper/">お役立ち資料</a></li>
-          <li><a href="/column/">お役立ちコラム</a></li>
-          <li><a href="/news/">お知らせ</a></li>
+          <li><a href="#">お役立ちコラム</a></li>
+          <li><a href="#">お知らせ</a></li>
         </ul>
       </div>
 
       <div class="group">
         <div class="group__ttl">お問合せ</div>
         <ul class="group__list">
-          <li><a href="/catalog/">サービス資料ダウンロード</a></li>
+          <li><a href="#">サービス資料ダウンロード</a></li>
           <li><a href="/contact/">お問合せ・ご相談</a></li>
         </ul>
       </div>
@@ -1396,7 +1396,7 @@
         <div class="group__ttl">その他</div>
         <ul class="group__list">
           <li><a href="/strength/">選ばれる理由</a></li>
-          <li><a href="/company/">企業情報</a></li>
+          <li><a href="#">企業情報</a></li>
         </ul>
       </div>
 
