business_support_load_page

--- a/app/assets/scss/2-basics/_base.scss
+++ b/app/assets/scss/2-basics/_base.scss
@@ -340,6 +340,12 @@ main {
   }
 }
 
+.text-muted {
+  font-size: 13px;
+  font-weight: normal;
+  color: $gray-color-8;
+}
+
 /*** custom container ***/
  .container-1200 {
   max-width: 1200px;
