rename path folder

--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -53,7 +53,7 @@
   <main class="business-support-loan-page">
     <section class="section-welcome fadein">
       <div class="section-welcome__banner">
-        <img src="/assets/img/business_support_loan/business_support_loan_banner.png"/>
+        <img src="/assets/img/common/banner_service.png"/>
       </div>
 
       <div class="section-welcome-info">
@@ -170,6 +170,15 @@
           <li class="text-muted">※　   審査の結果、110万円未満のご利用可能枠となる場合は、書面にてご連絡いたします。</li>
         </ul>
       </div>
+      <div class="section-primary__notice">
+        <ul class="sub-list">
+          <li class="text-muted">※1　初回はご融資枠全額をご融資いたします。ご融資枠の上限は、年収の1/3以内です。</li>
+          <li class="text-muted">※2　ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバルト・ビジネス・
+　　   アメリカン・エキスプレス®・カードの場合18.0％です。</li>
+          <li class="text-muted">※　   審査の結果、110万円未満のご利用可能枠となる場合は、書面にてご連絡いたします。</li>
+        </ul>
+      </div>
+
     </section>
     <section class="section-secondary fadein">
       <div class="container-1200">
