--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -53,6 +53,14 @@
   </div>
 
   <div class="nav__dropdown__list__search pc-only">
+    <div class="nav__dropdown__search">
+      <div class="nav__dropdown__search__container">
+        <div class="nav__dropdown__search__title">目的から探す</div>
+        <a class="bondi_blue_outline_btn">
+          <span class="bondi_blue_outline_btn__tittle">サービス一覧を見る</span>
+        </a>
+      </div>
+    </div>
     <div class="nav__dropdown__list">
       <ul class="nav__dropdown__list__first">
         <li>
