fix banner width height

--- a/app/assets/scss/4-pages/_business.scss
+++ b/app/assets/scss/4-pages/_business.scss
@@ -7,7 +7,7 @@
 
   // ===========START SECTIONS==========
   .section-welcome {
-    padding: 133px 0 133px 0;
+    padding: 136px 0;
     text-align: center;
     position: relative;
 
@@ -64,8 +64,8 @@
     }
 
     &__title {
-      margin-top: 30px;
-      margin-bottom: 56px;
+      margin-top: 38 px;
+      margin-bottom: 54px;
       color: #ffffff;
 
       .ttl-primary {
