--- a/app/assets/scss/4-pages/_seminar_detail.scss
+++ b/app/assets/scss/4-pages/_seminar_detail.scss
@@ -72,6 +72,7 @@
         max-width: 360px;
         display: block;
         font-weight: 400;
+        padding: 20px 0;
 
         @media #{$sp} {
           max-width: 260px;
