--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -36,7 +36,7 @@
     <div class="container-1200">
       <div class="section-wrapper flex gap60">
         <div class="section-img">
-          <img src="/assets/img/common/img-strength-01.png" alt="">
+          <img src="/assets/img/common/img-strength-001.jpg" alt="">
         </div>
 
         <div class="section-txt">
@@ -79,7 +79,7 @@
         </div>
 
         <div class="section-img">
-          <img src="/assets/img/common/img-strength-02.png" alt="">
+          <img src="/assets/img/common/img-strength-002.jpg" alt="">
         </div>
       </div>
 
