--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -1068,6 +1068,10 @@
             @media #{$sp} {
               padding: 15px;
             }
+
+            .blue_gradient_btn {
+              padding: 18px 35px;
+            }
           }
 
           &:hover {
