--- a/app/assets/scss/4-pages/_faq.scss
+++ b/app/assets/scss/4-pages/_faq.scss
@@ -8,11 +8,15 @@
 
   .section-welcome {
     position: relative;
-    padding: 140px 0;
+    padding: 138px 0;
     text-align: center;
     background-image: url("/assets/img/common/lower_visual.png");
     background-size: cover;
     background-repeat: no-repeat;
+
+    .ttl-primary {
+      margin-bottom: 0;
+    }
   }
 
   .section-search {
@@ -56,7 +60,7 @@
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 30px;
         padding: 0 120px;
-        transition: all .3s;
+        transition: all 0.3s;
 
         @media #{$sp} {
           display: block;
@@ -73,7 +77,7 @@
           a {
             width: 100%;
             padding: 50px 30px;
-            transition: all .3s;
+            transition: all 0.3s;
             &:hover {
               opacity: 1;
               img {
@@ -112,7 +116,7 @@
     position: relative;
     background-color: white;
     display: block;
-    transition: all .3s;
+    transition: all 0.3s;
 
     .banner__title {
       position: absolute;
