--- a/app/assets/scss/4-pages/_faq_service_list.scss
+++ b/app/assets/scss/4-pages/_faq_service_list.scss
@@ -3,16 +3,20 @@
     background-image: url("/assets/img/common/lower_visual.png");
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 46px 0 35px;
     text-align: center;
 
     @media #{$sp} {
       padding: 50px 10px;
     }
 
+    .containers {
+      padding: 48px 0;
+    }
+
     .ttl-primary {
       font-size: 42px;
       margin-bottom: 16px;
+      line-height: 1.3;
 
       @media #{$sp} {
         font-size: 32px;
@@ -22,6 +26,7 @@
     .ttl-tertiary {
       display: inline-block;
       font-size: 20px;
+      margin-bottom: 0;
 
       @media #{$sp} {
         font-size: 16px;
@@ -30,7 +35,7 @@
   }
 
   .section-primary {
-    background-color: #F5F5F5;  
+    background-color: #f5f5f5;
     padding: 0;
 
     .container-800 {
